[tool.poetry]
name = "75 days python mastery"
version = "0.1.0"
description = ""
authors = ["D9292S <kdeepankar40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
